# knights

./: .gitignore  CLAUDE.md  Cargo.toml  KNIGHTS.md  PLAN.md  README.md
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  engine.rs  lib.rs  piece.rs  raster.rs  redblack.rs  share.rs  spiral.rs
examples/: four-color.toml  mixed-pieces.toml  redblack.toml
src/: config.rs  courteous.rs  knight.rs  main.rs  piece.rs  raster.rs  redblack.rs  render.rs  spiral.rs
web/: Cargo.toml  README.md  index.html
web/src/: main.rs
