[package]
name = "knights-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knights-web"
path = "src/main.rs"

[dependencies]
knights-core = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
log = "0.4"

# Web-only: starting eframe on a canvas and triggering a PNG download need these.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "Url",
    "Window",
] }
